# Algoritmica

P1/: CMakeLists.txt  ClaseTiempo.cpp  Menu.cpp  algoritmos.cpp  algoritmos.hpp  calculosEstadisticos.cpp  calculosEstadisticos.hpp  calculosMatematicos.cpp  calculosMatematicos.hpp  calculosTiempos.cpp  calculosTiempos.hpp  ejemplo_gnuplot.sh  ficheros.hpp  miscelanea.cpp  miscelanea.hpp
P2/: Makefile  Menu.cpp  algoritmos.cpp  algoritmos.hpp  calculosEstadisticos.cpp  calculosEstadisticos.hpp  calculosMatematicos.cpp  calculosMatematicos.hpp  calculosTiempos.cpp  calculosTiempos.hpp  datosFinalesFusion.txt  datosFinalesQuickSort.txt  ejemplo_gnuplot.sh  ficheros.cpp  graficoFinal.eps  graficoFusionDivideyVenceras.eps  graficoQuicksortDivideyVenceras.eps  miscelanea.cpp  miscelanea.hpp  resultado.txt  sistemaEcuaciones.cpp  tiempoEstimaciónFusion.txt  tiempoEstimaciónQuickSort.txt  tiempoRealesFusion.txt  tiempoRealesFusionDyV.txt  tiempoRealesQuickSort.txt  tiempoRealesQuickSortDyV.txt
P3/: CMakeCache.txt  CMakeLists.txt  Divisa.hpp  Material.hpp  Menu.cpp  algoritmos.cpp  algoritmos.hpp  ficheros.cpp  ficheros.hpp  voraces.cpp  voraces.hpp
P4/: CMakeLists.txt  Divisa.hpp  Menu.cpp  algoritmos.cpp  algoritmos.hpp  dinamicos.cpp  dinamicos.hpp  ficheros.cpp  ficheros.hpp  sistemamonetario.txt  sistemamonetario2.txt
P5/: CMakeLists.txt  ClaseTiempo.hpp  Menu.cpp  algoritmos.cpp  algoritmos.hpp  montecarlo.cpp  montecarlo.hpp  reinas.cpp  reinas.hpp
