CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(Menu)
ENABLE_LANGUAGE(CXX)

add_executable(Menu Menu.cpp Menu.cpp algoritmos.cpp algoritmos.hpp calculosEstadisticos.cpp calculosEstadisticos.hpp 
calculosMatematicos.cpp calculosMatematicos.hpp calculosTiempos.cpp calculosTiempos.hpp ficheros.cpp ficheros.hpp
miscelanea.cpp miscelanea.hpp sistemaEcuaciones.cpp sistemaEcuaciones.hpp ClaseTiempo.cpp)

